--- a/src/app/parts/week-selector/week-selector.component.html
+++ b/src/app/parts/week-selector/week-selector.component.html
@@ -1,26 +1,56 @@
 <div class="week-selector-container">
-  <div class="week-selector-container-column" [class.week-selector-container-column-active]="getCurrentWeek() == -2" (click)="setCurrentWeek(-2)">
+  <div
+    class="week-selector-container-column"
+    [class.week-selector-container-column-active]="getCurrentWeek() == -2"
+    (click)="setCurrentWeek(-2)">
+
     <div class="week-selector-container-column-circle"></div>
-    <div class="week-selector-container-column-title">2 недели назад</div>
+    <div class="app-card-page-text">
+      2 недели назад
+    </div>
   </div>
 
-  <div class="week-selector-container-column" [class.week-selector-container-column-active]="getCurrentWeek() == -1" (click)="setCurrentWeek(-1)">
+  <div
+    class="week-selector-container-column"
+    [class.week-selector-container-column-active]="getCurrentWeek() == -1"
+    (click)="setCurrentWeek(-1)">
+
     <div class="week-selector-container-column-circle"></div>
-    <div class="week-selector-container-column-title">1 неделя назад</div>
+    <div class="app-card-page-text">
+      1 неделя назад
+    </div>
   </div>
 
-  <div class="week-selector-container-column" [class.week-selector-container-column-active]="getCurrentWeek() == 0" (click)="setCurrentWeek(0)">
+  <div
+    class="week-selector-container-column"
+    [class.week-selector-container-column-active]="getCurrentWeek() == 0"
+    (click)="setCurrentWeek(0)">
+
     <div class="week-selector-container-column-circle"></div>
-    <div class="week-selector-container-column-title">Текущая неделя</div>
+    <div class="app-card-page-text">
+      Текущая неделя
+    </div>
   </div>
 
-  <div class="week-selector-container-column" [class.week-selector-container-column-active]="getCurrentWeek() == 1" (click)="setCurrentWeek(1)">
+  <div
+    class="week-selector-container-column"
+    [class.week-selector-container-column-active]="getCurrentWeek() == 1"
+    (click)="setCurrentWeek(1)">
+
     <div class="week-selector-container-column-circle"></div>
-    <div class="week-selector-container-column-title">Через 1 неделю</div>
+    <div class="app-card-page-text">
+      Через 1 неделю
+    </div>
   </div>
 
-  <div class="week-selector-container-column" [class.week-selector-container-column-active]="getCurrentWeek() == 2" (click)="setCurrentWeek(2)">
+  <div
+    class="week-selector-container-column"
+    [class.week-selector-container-column-active]="getCurrentWeek() == 2"
+    (click)="setCurrentWeek(2)">
+
     <div class="week-selector-container-column-circle"></div>
-    <div class="week-selector-container-column-title">Через 2 недели</div>
+    <div class="app-card-page-text">
+      Через 2 недели
+    </div>
   </div>
 </div>
