--- a/src/app/pages/cabinets/card/pages/timetable/cabinet-card-timetable.page.html
+++ b/src/app/pages/cabinets/card/pages/timetable/cabinet-card-timetable.page.html
@@ -1,30 +1,17 @@
-<div class="page">
+<div class="app-card-page">
   <app-header></app-header>
 
-  <div class="page-elements">
-    <div app-cabinet-card-menu class="page-left-menu" [cabinetId]="cabinet.id" [currentTab]="'TIMETABLE'"></div>
+  <div class="app-card-page-elements">
+    <div app-cabinet-card-menu class="app-card-page-left-menu" [cabinetId]="cabinet.id" [currentTab]="'TIMETABLE'"></div>
 
-    <div class="page-content">
-      <div *ngIf="loadingInProgress" class="page-loading">
-        <fa name="spinner" class="loading-sign" animation="spin"></fa>
-      </div>
-
+    <div class="app-card-page-content-scrollable">
       <ng-container *ngIf="!loadingInProgress">
-        <h3 class="app-header" *ngIf="!!cabinet.id">
-          Кабинет '{{cabinet.name}}'
-        </h3>
-
-        <br>
-
-        <app-week-selector (onWeekChanged)="onWeekChanged($event)"></app-week-selector>
-
-        <br>
-
         <app-timetable [groups]="cabinetGroups" [lessons]="cabinetLessons" [showFilters]="false"></app-timetable>
       </ng-container>
     </div>
 
-    <div class="page-right-menu">
+    <div class="app-card-page-right-menu">
+      <app-week-selector (onWeekChanged)="onWeekChanged($event)"></app-week-selector>
     </div>
   </div>
 </div>
