--- a/src/app/parts/week-selector/week-selector.component.less
+++ b/src/app/parts/week-selector/week-selector.component.less
@@ -2,38 +2,41 @@
 
 .week-selector-container {
   display: flex;
-  flex-direction: row;
-  background-color: @color-fill_contrast_medium;
+  flex-direction: column;
+
+  margin: @app-size-1;
+
+  background-color: @color-fill_basic_subtle;
 }
 
 .week-selector-container-column {
   display: flex;
-  flex-direction: column;
-  width: 20%;
+  flex-direction: row;
+
   align-items: center;
   cursor: pointer;
-  padding: 15px;
+
+  padding: @app-size-2;
+}
+
+.week-selector-container-column:hover {
+  opacity: 0.7;
+
+  cursor: pointer;
 }
 
 .week-selector-container-column-active {}
 
 .week-selector-container-column-circle {
-  width: 20px;
-  height: 20px;
+  width: @app-size-2;
+  height: @app-size-2;
+
   border: 1px solid @color-fill_accent_strong;
-  border-radius: 10px;
+  border-radius: @app-size-1;
+
+  margin-right: @app-size-1;
 }
 
-.week-selector-container-column:hover .week-selector-container-column-circle, .week-selector-container-column-active .week-selector-container-column-circle {
+.week-selector-container-column-active .week-selector-container-column-circle {
   background-color: @color-fill_accent_strong;
-}
-
-.week-selector-container-column-title {
-  margin-top: 5px;
-  font-family: hogwartsRegular;
-  color: @color-fill_text_basic_light;
-}
-
-.week-selector-container-column:hover .week-selector-container-column-title, .week-selector-container-column-active .week-selector-container-column-title {
-  color: @color-fill_text_basic;
 }
