--- a/src/styles/card/app-card-page.less
+++ b/src/styles/card/app-card-page.less
@@ -76,18 +76,25 @@
 
   width: 100%;
 
+  height: @app-size-6;
+
   margin-bottom: @app-size-0-5;
 }
 
 .app-card-page-row-with-actions-info {
   display: flex;
   flex-direction: row;
+  align-items: center;
 
-  padding: @app-size-2;
+  height: @app-size-6;
+
+  padding: 0 @app-size-2;
 
   background: @color-alt_basic_base;
 
   border-radius: @app-size-0-5;
+
+  box-sizing: border-box;
 }
 
 .app-card-page-row-with-actions-actions {
