--- a/src/app/pages/students/card/pages/payment/components/payment-row/student-card-payment.row.less
+++ b/src/app/pages/students/card/pages/payment/components/payment-row/student-card-payment.row.less
@@ -1,34 +1,33 @@
 @import "~styles/index";
 
-.payments-date-column {
-  .list-row-item;
+.app-student-card-payment-row-info {
+  .app-card-page-row-with-actions-info;
 
-  width: 20%;
+  width: 80%;
+}
+
+.payments-date-column {
+  width: 25%;
 }
 
 .payments-amount-column {
-  .list-row-item;
-
-  width: 20%;
+  width: 25%;
 }
 
 .payments-teachers-column {
-  .list-row-item;
-
-  width: 20%;
+  width: 25%;
 }
 
 .payments-registered-column {
-  .list-row-item;
+  width: 25%;
+}
+
+.app-student-card-payment-row-actions {
+  .app-card-page-row-with-actions-actions;
 
   width: 20%;
 }
 
-.payments-actions-column {
-  .list-row-item;
-
-  width: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+.app-student-card-payment-row-actions-delete {
+  width: 100%;
 }
