--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,14 +1,9 @@
 @import "abstract/index";
-@import "card/index";
 @import "common/index";
 @import "modal/index";
 @import "page/index";
+@import "specific/index";
 
-@import "app-clickable-row";
 @import "controls";
-@import "loader";
-@import "page.less";
-@import 'scroll.less';
 @import 'student-status.less';
-@import "table.less";
 @import "tag-input.less";
