--- a/src/styles/specific/app-loader.less
+++ b/src/styles/specific/app-loader.less
@@ -1,14 +1,31 @@
 @import "~styles/abstract/index";
 
-.app-loader {
+.app-loader-layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   position: absolute;
-  top: 250px;
-  left: calc(50% - 40px);
+
+  width: 100%;
+  height: 100%;
+
+  top: 0;
+  left: 0;
+
+  background: @color-fill_basic_base;
+}
+
+.app-loader {
+  width: @app-size-10;
+  height: @app-size-10;
+
   border-radius: 50%;
-  border: 4px solid @color-fill_accent_subtle;
-  border-top: 4px solid @color-fill_accent_strong;
-  width: 80px;
-  height: 80px;
+
+  border: @app-size-0-5 solid @color-fill_accent_light;
+  border-top: @app-size-0-5 solid @color-fill_accent_strong;
+
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
 }
