--- a/src/app/pages/students/card/pages/payment/views/payment-row/student-card-payment-row.view.less
+++ b/src/app/pages/students/card/pages/payment/views/payment-row/student-card-payment-row.view.less
@@ -29,5 +29,11 @@
 }
 
 .app-student-card-payment-row-actions-delete {
-  width: 100%;
+  width: 49%;
+
+  margin-right: 1%;
+}
+
+.app-student-card-payment-row-actions-process {
+  width: 50%;
 }
