--- a/src/app/pages/students/card/pages/attendance/views/attendance-row/student-card-attendance-row.view.less
+++ b/src/app/pages/students/card/pages/attendance/views/attendance-row/student-card-attendance-row.view.less
@@ -1,22 +1,26 @@
 @import "~styles/index";
 
-.attendance-date-column {
-  .list-row-item;
+.app-student-card-attendance-row-info {
+  .app-card-page-row-with-actions-info;
 
-  width: 30%;
+  width: 80%;
 }
 
-.attendance-type-column {
-  .list-row-item;
-
-  width: 30%;
+.app-student-card-attendance-row-info-date-column {
+  width: 50%;
 }
 
-.attendance-actions-column {
-  .list-row-item;
-
-  width: 40%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+.app-student-card-attendance-row-info-status-column {
+  width: 50%;
 }
+
+.app-student-card-attendance-row-actions {
+  .app-card-page-row-with-actions-actions;
+
+  width: 20%;
+}
+
+.app-student-card-attendance-row-actions-delete {
+  width: 100%;
+}
+
